# thinking-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/instructions/: python.instructions.md
app/: api.py  auth.py  config.py  critical.py  db.py  db_sqlalchemy.py  db_utils.py  json_rpc.py  lateral.py  logger.py  main.py  mcp.py  mcp_logger.py  memory.py  migrate_to_sqlalchemy.py  root_cause.py  sequential.py  six_hats_logic.py  systems_thinking.py
docs/: SQLALCHEMY_UPGRADE_SUMMARY.md
test/: test_comprehensive.py  test_mcp_db.py  test_six_hats.py  test_six_hats_http.py  test_sqlalchemy.py  test_sqlalchemy_integration.py  test_sqlalchemy_simple.py
webui/: README.md  app.js  index.html  start_webui.bat  style.css  webui_server.py
